Bug fixes and improvements.
Reposition titles to avoid overlapping Lux.
Add links to browser recommendation buttons.
Make obstacles explode when they reach the planet.
Clear obstacle sounds when quitting game.
Make transition more robust, clear related tweens on game reset.
Reduce intensity of UFO canopy specular highlight.
Stop firing when entering planet transition.
Randomly roll satellite obstacles to show window.
Move character to 12 o'clock when teleporting in.
Increase title sequence time/title to four seconds.
Prevent pause and mute buttons from triggering firing.
Show Dolby logo only when EC3 is supported.

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -327,11 +327,11 @@
 .title {
   position: absolute;
   width: 1000px;
-  height: 300px;
+  height: 200px;
   
   left:0;
   right:0;
-  margin: 20px auto;
+  margin: 70px auto;
   
   top: 50%;
   
